src/parser/snapshots/protols__parser__rename__test__rename.snap
---
source: src/parser/rename.rs
expression: "tree.rename(&pos_book_rename, \"Kitab\", contents)"
---
changes:
  "file://foo/bar.proto":
    - range:
        start:
          line: 5
          character: 8
        end:
          line: 5
          character: 12
      newText: Kitab
    - range:
        start:
          line: 20
          character: 13
        end:
          line: 20
          character: 17
      newText: Kitab
    - range:
        start:
          line: 21
          character: 4
        end:
          line: 21
          character: 8
      newText: Kitab
    - range:
        start:
          line: 25
          character: 32
        end:
          line: 25
          character: 36
      newText: Kitab
