src/parser/snapshots/protols__parser__rename__test__rename_field_and_enum_value-2.snap
---
source: src/parser/rename.rs
expression: "rename_fn(\"name\", &pos_plain_field)"
---
- range:
    start:
      line: 14
      character: 11
    end:
      line: 14
      character: 16
  newText: name
