src/parser/snapshots/protols__parser__rename__test__rename_field_and_enum_value-3.snap
---
source: src/parser/rename.rs
expression: "rename_fn(\"writer\", &pos_user_type_field)"
---
- range:
    start:
      line: 15
      character: 11
    end:
      line: 15
      character: 17
  newText: writer
