src/parser/snapshots/protols__parser__rename__test__rename_field_and_enum_value-4.snap
---
source: src/parser/rename.rs
expression: "rename_fn(\"tallies\", &pos_map_field)"
---
- range:
    start:
      line: 16
      character: 23
    end:
      line: 16
      character: 29
  newText: tallies
