src/parser/snapshots/protols__parser__rename__test__rename_field_and_enum_value-5.snap
---
source: src/parser/rename.rs
expression: "rename_fn(\"content\", &pos_oneof_name)"
---
- range:
    start:
      line: 17
      character: 10
    end:
      line: 17
      character: 14
  newText: content
