src/parser/snapshots/protols__parser__rename__test__rename_field_and_enum_value-6.snap
---
source: src/parser/rename.rs
expression: "rename_fn(\"words\", &pos_oneof_field)"
---
- range:
    start:
      line: 18
      character: 15
    end:
      line: 18
      character: 19
  newText: words
