src/parser/snapshots/protols__parser__rename__test__rename_fields-2.snap
---
source: src/parser/rename.rs
expression: "tree.rename_fields(\"Book.Author\", \"Writer\", contents)"
---
- range:
    start:
      line: 21
      character: 4
    end:
      line: 21
      character: 15
  newText: Book.Writer
