src/parser/snapshots/protols__parser__rename__test__rename_fields-3.snap
---
source: src/parser/rename.rs
expression: "tree.rename_fields(\"xyz.abc\", \"Doesn't matter\", contents)"
---
[]
