src/parser/snapshots/protols__parser__rename__test__rename_service_and_rpc-2.snap
---
source: src/parser/rename.rs
expression: "rename_fn(\"FetchBook\", &pos_rpc)"
---
- range:
    start:
      line: 11
      character: 8
    end:
      line: 11
      character: 15
  newText: FetchBook
