src/parser/snapshots/protols__parser__rename__test__rename_service_and_rpc.snap
---
source: src/parser/rename.rs
expression: "rename_fn(\"Catalog\", &pos_service)"
---
- range:
    start:
      line: 10
      character: 8
    end:
      line: 10
      character: 15
  newText: Catalog
